# thesola.io

./: .gitignore  CNAME  _nav.html  flake.nix  fonts.css  homepage.variant.css  index.html  navbar.variant.css  sitemap.xml  styles.css
.github/workflows/: ipfs.yml  pages.yml
.well-known/: microsoft-identity-association.json  webfinger
about/: index.html
backend/: default.nix  pyproject.toml
backend/nixos/: default.nix
backend/thesola_io_api/: __init__.py  app.py  config.py  nowplaying.py  wsgi.py
contact/: index.html
frontend/: _nav.html  fonts.css  homepage.variant.css  index.html  navbar.variant.css  pubkey.asc  robots.txt  sitemap.xml  styles.css
frontend/.well-known/: CloudIdVerificationCode.txt
frontend/@me/: index.html
frontend/contact/: index.html
frontend/developer/: index.html
frontend/sysadmin/: index.html
nixer/: index.html
projects/: index.html
